updated vendor covers, fixed credit app visibility, centered login page

--- a/app/assets/stylesheets/catalogues.scss
+++ b/app/assets/stylesheets/catalogues.scss
@@ -262,3 +262,7 @@ body {
   // margin-left: 20px;
   // margin-right: 20px;
 }
+
+.log-in {
+  text-align: center;
+}
